<resources>
    <string name="app_name">MeuTeclado</string>

    <string name="key_a">a</string>
    <string name="key_b">b</string>
    <string name="key_c">c</string>
    <string name="key_ç">ç</string>
    <string name="key_d">d</string>
    <string name="key_e">e</string>
    <string name="key_f">f</string>
    <string name="key_g">g</string>
    <string name="key_h">h</string>
    <string name="key_i">i</string>
    <string name="key_j">j</string>
    <string name="key_k">k</string>
    <string name="key_l">l</string>
    <string name="key_m">m</string>
    <string name="key_n">n</string>
    <string name="key_o">o</string>
    <string name="key_p">p</string>
    <string name="key_q">q</string>
    <string name="key_r">r</string>
    <string name="key_s">s</string>
    <string name="key_t">t</string>
    <string name="key_u">u</string>
    <string name="key_v">v</string>
    <string name="key_w">w</string>
    <string name="key_x">x</string>
    <string name="key_y">y</string>
    <string name="key_z">z</string>
    <string name="shift">⇑</string>
    <string name="delete">⌫</string>
    <string name="numeros">½</string>
    <string name="virgula">,</string>
    <string name="ponto">.</string>
    <string name="done">↵</string>

    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>

    <string name="arroba">"@"</string>
    <string name="jogodavelha">#</string>
    <string name="cifrão">$</string>
    <string name="underlina">_</string>
    <string name="ecomercial">&amp;</string>
    <string name="menos">-</string>
    <string name="mais">+</string>
    <string name="parenteses1">(</string>
    <string name="parenteses2">)</string>
    <string name="barra">/</string>

    <string name="asterisco">*</string>
    <string name="aspasduplas">\"</string>
    <string name="aspassimples">"'"</string>
    <string name="doispontos">:</string>
    <string name="pontoevirgula">;</string>
    <string name="exclamacao">!</string>
    <string name="interrogacao">"?"</string>

    <string name="alfabeto">ABC</string>

</resources>